# safetypes

./: LICENSE  LICENSE.txt  README.md  README.rst  publish.bat  pyproject.toml  safe_types_test.py  setup.py
safetypes/: __init__.py
safetypes/base/: SafeFiles.py  SafeFunctionTypes.py
safetypes/test/: safe_types_test.py
