[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "safetypes"
version = "0.1rc2"
authors = [
  { name="Rafael Gutiérrez Martínez", email="ragutimar@gmail.com" },
]
description = "Python is a not typed language, and runs under the paradigm of first try and then it success or fails. This package allows you to have the capability of apply typing features in last versions of Python, allowing to the developer to have a transparent mechanism to grant that typing annotations are satisfied in the execution time of their programs."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Education :: Testing",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Software Development :: Debuggers",
    "Typing :: Typed"
]

[project.urls]
"Homepage" = "https://github.com/wiscot/safetypes"
"Bug Tracker" = "https://github.com/wiscot/safetypes/issues"
